--- a/microservicios-examenes/pom.xml
+++ b/microservicios-examenes/pom.xml
@@ -22,6 +22,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.curso.microservicios.commons.examenes</groupId>
+			<artifactId>microservicios-commons-examenes</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.curso.microservicios.commons</groupId>
 			<artifactId>microservicios-commons</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
